# curiosity

./: .gitignore  Pipfile  README.md  setup.cfg
curiosity/: app.py  index.html  index.js  websocket.js
tests/: example.py
