[metadata]
name = curiosity
version = attr: drip.__version__
description = "Python GUIs for Humans"
author = Ross Hodapp
email = ross.hodapp@drip.com
url = https://github.com/Ishamyyl/drip-python
download_url = https://github.com/Ishamyyl/drip-python
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3.7
  Topic :: Utilities
keywords =
  gui
  electron
  cef
  chromium
  web
  websocket

[options]
packages = find:
include_package_data = True
python_requires = >=3.7.0
install_requires =
  autobahn
  jinja2
tests_require =
  pytest

[options.packages.find]
exclude =
  tests*
